--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,9 @@ jobs:
           buildArg: |
             VERSION=${{github.ref}}
             COMMIT=${{github.sha}}
+      - name: Deploy docker container 
+        uses: joelwmale/webhook-action@master
+        env:
+          WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+          data: "{ 'myField': 'myFieldValue'}"
 
