--- a/PictureLibrary-RaspberryAPI/PictureLibrary-RaspberryAPI.csproj
+++ b/PictureLibrary-RaspberryAPI/PictureLibrary-RaspberryAPI.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>PictureLibrary_RaspberryAPI</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
