--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   cd:
-    runs-on: [ubuntu-latest, ARM]
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
