Normalize line endings

--- a/PictureLibrary-RaspberryAPI/PictureLibrary-RaspberryAPI.csproj
+++ b/PictureLibrary-RaspberryAPI/PictureLibrary-RaspberryAPI.csproj
@@ -15,6 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tests\" />
+  </ItemGroup>
 
 
 </Project>
