--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,6 @@ site_name: API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
 theme:
   name: material
-plugins:
-  - search
-markdown_extensions:
-  - codehilite
-  - admonition
-  - toc:
-      permalink: true
+nav: 
+  - 'index.md'
+  - 'project_structure.md'
