--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
-theme: mkdocs
+theme: material
 nav: 
   - 'index.md'
   - 'project_structure.md'
