--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: API Documentation
+site_name: PictureLibrary-API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
 theme: material
 nav: 
