Add code highlights

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,8 @@
 site_name: PictureLibrary-API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
-theme: material
-markdown_extensions:
-  - codehilite
-  - admonition
-  - toc:
-      permalink: true
+theme: 
+    name: material
+    highlightjs: true
 nav: 
   - 'index.md'
   - 'data-model.md'
