--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,11 @@
 site_name: PictureLibrary-API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
-theme: 
-    name: material
-    highlightjs: true
+theme: material
 nav: 
   - 'index.md'
   - 'data-model.md'
   - 'project_structure.md'
   - 'endpoints.md'
 markdown_extensions:
-  - 'pymdownx.highlight'
-  - 'pymdownx.superfences'
+  - pymdownx.highlight
+  - pymdownx.superfences
