--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,6 @@
 site_name: PictureLibrary-API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
 theme: material
-nav: 
-  - 'index.md'
-  - 'data-model.md'
-  - 'project_structure.md'
-  - 'endpoints.md'
 markdown_extensions:
-  - pymdownx.highlight
-  - pymdownx.superfences
+  - codehilite
+  - admonition
