--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,11 @@
 site_name: PictureLibrary-API Documentation
 repo_url: https://github.com/TomaszKumiega/PictureLibrary-API
-theme: material
+theme: 
+    name: material
+    theme:
+      palette:
+        scheme: slate
+        primary: teal
 markdown_extensions:
   - codehilite
   - admonition
