--- a/PictureLibrary-API/appsettings.Development.json
+++ b/PictureLibrary-API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UsersDatabase": "Server=localhost;Database=PictureLibraryAPI;Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
