Add secret string to app settings

--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "b.d215agGAFJH.adfhHAetAPQ53'"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
