Add Sqlite connection string

--- a/PictureLibrary-API/appsettings.Development.json
+++ b/PictureLibrary-API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UsersDatabase": "Server=localhost;Database=PictureLibraryAPI;Trusted_Connection=true;"
+    "UsersDatabase": "Data Source=test.db;Version=3;UseUTF16Encoding=True"
   },
   "Logging": {
     "LogLevel": {
