--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -2,6 +2,9 @@
   "AppSettings": {
     "Secret": "b.d215agGAFJH.adfhHAetAPQ53'"
   },
+  "ConnectionStrings": {
+    "UsersDatabase": "Data Source=/PictureLibraryAPI/Database/PictureLibraryAPI.db;Version=3;UseUTF16Encoding=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
