--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,14 @@ jobs:
           buildArg: |
             VERSION=${{github.ref}}
             COMMIT=${{github.sha}}
+      - name: Publish image for Arm32 architecture
+        id: docker_Arm32
+        uses: matootie/github-docker@v2.2.2
+        with:
+          accessToken: ${{github.token}}
+          buildArg: |
+            imageName: PictureLibraryAPI-arm32
+            VERSION=${{github.ref}}
+            COMMIT=${{github.sha}}
+            contextName: dockerfileArm32
 
