--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -12,5 +12,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "localhost.pfx",
+        "Password": ""
+      }
+    }
+  }
 }
