Change certificate path

--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -16,7 +16,7 @@
   "Kestrel": {
     "Certificates": {
       "Default": {
-        "Path": "localhost.pfx",
+        "Path": "/PictureLibraryAPI/Certificates/localhost.pfx",
         "Password": ""
       }
     }
