--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -17,7 +17,7 @@
     "Certificates": {
       "Default": {
         "Path": "/PictureLibraryAPI/Certificates/localhost.pfx",
-        "Password": ""
+        "Password": "98VcxAxFfWGbdv8D98VcxAxFfWGbdv8D"
       }
     }
   }
