--- a/PictureLibrary-API/appsettings.json
+++ b/PictureLibrary-API/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "b.d215agGAFJH.adfhHAetAPQ53'"
   },
   "ConnectionStrings": {
-    "UsersDatabase": "Data Source=/PictureLibraryAPI/Database/PictureLibraryAPI.db;Version=3;UseUTF16Encoding=True"
+    "UsersDatabase": "Data Source=/PictureLibraryAPI/Database/PictureLibraryAPI.db"
   },
   "Logging": {
     "LogLevel": {
