--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Publish image
         id: docker
-        uses: matootie/github-docker@v2.2.2
+        uses: docker/build-push-action@v2.2.1
         with:
-          accessToken: ${{github.token}}
-          imageName: picturelibraryapi-arm32
-          buildArgs: |
-            VERSION=${{github.ref}}
-            COMMIT=${{github.sha}}
-          contextName: arm32.Dockerfile
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN }}
+          registry: docker.pkg.github.com
+          repository: TomaszKumiega/PictureLibrary-API/picturelibraryapi-arm32
+          tag_with_ref: true
+          file: ./arm32.Dockerfile
+
