--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,5 @@ jobs:
           password: ${{ secrets.TOKEN }}
           registry: docker.pkg.github.com
           repository: TomaszKumiega/PictureLibrary-API/picturelibraryapi
+          file: ./dockerfile
 
