--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,20 +10,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Publish image for Arm32
         id: docker_arm32_publish
-        uses: docker/build-push-action@v2.2.1
+        uses: elgohr/Publish-Docker-Github-Action@3.02
         with:
+          name: picturelibraryapi-arm32
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
           registry: docker.pkg.github.com
-          repository: TomaszKumiega/PictureLibrary-API/picturelibraryapi-arm32
-          file: ./arm32.Dockerfile
+          dockerFile: arm32.Dockerfile
       - name: Publish default image
         id: docker_publish
-        uses: docker/build-push-action@v2.2.1
+        uses: elgohr/Publish-Docker-Github-Action@3.02
         with:
+          name: picturelibraryapi
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN }}
           registry: docker.pkg.github.com
-          repository: TomaszKumiega/PictureLibrary-API/picturelibraryapi
-          file: ./dockerfile
+          dockerFile: dockerfile
 
