Add authentication config

--- a/PictureLibrary.API/appsettings.json
+++ b/PictureLibrary.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "yOtcCw7bXWzrzYPr7u3Tav6qR3n5Od",
+    "Issuer": "http://localhost:5243",
+    "Audience": "http://localhost:5243"
+  }
 }
