--- a/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
+++ b/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PictureLibrary.Model\PictureLibrary.Model.csproj" />
+  </ItemGroup>
+
 </Project>
