--- a/PictureLibrary.API/appsettings.json
+++ b/PictureLibrary.API/appsettings.json
@@ -10,5 +10,6 @@
     "Key": "yOtcCw7bXWzrzYPr7u3Tav6qR3n5Od",
     "Issuer": "http://localhost:5243",
     "Audience": "http://localhost:5243"
-  }
+  },
+  "PrivateKey": ""
 }
