--- a/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
+++ b/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="MediatR" Version="11.1.0" />
   </ItemGroup>
 
