--- a/PictureLibrary.API/PictureLibrary.API.csproj
+++ b/PictureLibrary.API/PictureLibrary.API.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.4.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
@@ -23,6 +25,10 @@
     <ProjectReference Include="..\PictureLibrary.DataAccess\PictureLibrary.DataAccess.csproj" />
     <ProjectReference Include="..\PictureLibrary.Model\PictureLibrary.Model.csproj" />
     <ProjectReference Include="..\PictureLibrary.Tools\PictureLibrary.Tools.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Validation\" />
   </ItemGroup>
 
 </Project>
