--- a/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
+++ b/PictureLibrary.DataAccess/PictureLibrary.DataAccess.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.1" />
   </ItemGroup>
 
   <ItemGroup>
