--- a/PictureLibrary.APIClient/PictureLibrary.APIClient.csproj
+++ b/PictureLibrary.APIClient/PictureLibrary.APIClient.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\Responses\" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
 </Project>
